fix: delete align-items from wapper

--- a/client/src/components/blocks/blockWrapper/styles.module.css
+++ b/client/src/components/blocks/blockWrapper/styles.module.css
@@ -8,7 +8,7 @@
   width: 90%;
   max-width: 960px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   flex-wrap: wrap;
 }
